# earning-calls

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  implementation_plan.md.resolved  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: python-app.yml
configs/: speaker_override.yaml  text_config.yaml
configs/lexicons/: forward_looking.yaml  hedging.yaml  uncertainty.yaml
data/processed/: call_manifest.csv
notebooks/: vansh_finbert_sandbox.ipynb
outputs/: baseline_comparison.json  baseline_price_results.json  feature_importance.json
outputs/evaluation/: backtest_results.json
scripts/: download_earnings22.py  download_market_data.py  download_transcripts.py  extract_all_text_features.py  get_real_targets.py  init_db.sql
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/evaluation/: __init__.py  backtesting.py  leakage.py  metrics.py
src/features/: __init__.py  audio_assembler.py  audio_opensmile.py  audio_prosody.py  audio_quality.py  audio_utils.py  audio_wav2vec2.py  dataset_split.py  divergence.py  interaction_assembler.py  multimodal_join.py  qa_pressure.py  structural_features.py  text_assembler.py  text_sentiment.py  text_specificity.py  text_uncertainty.py
src/inference/: __init__.py  pipeline.py
src/modeling/: __init__.py  baseline_comparison.py  baseline_price.py  fusion_model.py  train_fusion.py  train_lightgbm.py
src/preprocessing/: __init__.py  db.py  segmentation.py  transcript_ingest.py
tests/: __init__.py  test_audio_utils.py  test_leakage.py  test_metrics.py  test_text_features.py
(+8 files in other folders)
